--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.application.name=gp-Ecom
 spring.datasource.url=jdbc:postgresql://localhost:5432/EcomDB
 spring.datasource.username=postgres
 spring.datasource.password=Test@1
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 
